@@ -1,0 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>El titulo del post</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/estilos.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <h1> Aqui vamos a hacer un blog post</h1>
+    <p>Y Este es el parrafo de inicio</p>
+</body>
+</html>
