@@ -1,0 +1,6 @@
+body
+{
+    color:deeppink;
+    text-align: center;
+    font-family: "Arial";
+}
