@@ -1,3 +1,7 @@
 Este es mi primer Archivo Control Git
 Nombre: gepigal
 Linea Nro 3: CMISL
+
+Nuevo Parrafo
+
+Linea sin comit
